[package]
name = "bevy_crossterm"
version = "0.4.0"
authors = ["Chris Yealy <christopherjyealy@gmail.com>"]
description = "Develop terminal games with crossterm and Bevy"
repository = "https://github.com/octotep/bevy_crossterm/"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default-features = false, features = ["bevy_asset"] }
bevy_asset = "0.11"
bevy_app = "0.11"
bevy_ecs = "0.11"
crossterm = { version = "0.27", features = ["serde"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.7"
broccoli = "1.2.5"

[dev-dependencies]
bevy = { version = "0.11", default-features = false, features = ["bevy_asset"] }
ron = "0.8"
textwrap = "0.13.1"

[[example]]
name = "window"
